@@ -14,26 +14,50 @@ void Renderer::Init() {
 	grid_mesh.Init();
 	skybox.Init();
 
-
 	auto cube = scene.CreateMeshEntity("./res/meshes/cube/cube.obj");
 	auto cube2 = scene.CreateMeshEntity("./res/meshes/cube/cube.obj");
 	auto cube3 = scene.CreateMeshEntity("./res/meshes/cube/cube.obj");
 	auto orange = scene.CreateMeshEntity("./res/meshes/oranges/orange.obj");
-	for (float i = 0; i < 108.0f; i++) {
+	for (float i = 0; i < 18.0f; i++) {
 		auto l = scene.CreatePointLight();
 		l->SetColor(i / 108.0f, cosf(ExtraMath::ToRadians(i * 10.0f / 3.0f)), sinf(ExtraMath::ToRadians(i * 10.0f / 3.0f)));
 	}
 	auto sl = scene.CreateSpotLight();
-	scene.LoadScene();
-	sl->SetPosition(0.0f, 10.0f, 0.0f);
-	sl->SetColor(0.8f, 0.0f, 0.0f);
-	sl->SetLightDirection(1.0f, 0.0f, 0.0f);
+	auto sl2 = scene.CreateSpotLight();
+	auto sl3 = scene.CreateSpotLight();
+	auto sl4 = scene.CreateSpotLight();
+
+	sl->SetPosition(0.0f, 10.0f, -5.0f);
+	sl2->SetPosition(5.0f, 10.0f, 0.0f);
+	sl3->SetPosition(-5.0f, 10.0f, 0.0f);
+	sl4->SetPosition(0.0f, 10.0f, 5.0f);
+	sl->SetColor(0.8f, 0.8f, 0.8f);
+	sl2->SetColor(0.8f, 0.8f, 0.8f);
+	sl3->SetColor(0.8f, 0.8f, 0.8f);
+	sl4->SetColor(0.3f, 0.3f, 0.3f);
+	sl2->SetLightDirection(1.0f, 0.0f, 0.0f);
+	sl3->SetLightDirection(-1.0f, 0.0f, 0.0f);
+	sl4->SetLightDirection(0.0f, 0.0f, 1.0f);
+	sl->SetLightDirection(0.0f, 0.0f, -1.0f);
 	orange->SetPosition(100.0f, 10.0f, 0.0f);
 	cube->SetPosition(10.0f, 0.0f, 0.0f);
 	cube->SetRotation(45.0f, 45.0f, 0.0f);
 	cube2->SetPosition(10.0f, 0.0f, 0.0f);
 	cube3->SetScale(200.0f, 5.0f, 200.0f);
 	cube3->SetRotation(0.0f, 0.0f, 0.0f);
+	static float angle = 0;
+	static float x = 0.0f;
+	static float z = 0.0f;
+	float angle_offset = 0.0f;
+
+	for (auto light : scene.GetPointLights()) {
+		angle += 0.005 / 3.0f;
+		angle_offset += 10.0f / 3.0f;
+		x = 90.0f * cosf(ExtraMath::ToRadians(angle + angle_offset));
+		z = 90.0f * sinf(ExtraMath::ToRadians(angle + angle_offset));
+		light->SetPosition(x, 10.0f, z);
+	}
+	scene.LoadScene();
 
 	PrintUtils::PrintSuccess(std::format("Renderer initialized in {}ms", PrintUtils::RoundDouble((glfwGetTime() - time_start) * 1000)));
 }
@@ -48,46 +72,32 @@ void Renderer::DrawGrid() {
 }
 
 void Renderer::RenderScene() {
-	static std::vector<double> vals = { 1, 1, 1, 1, 1 };
-	static float angle = 0;
-	static float x = 0.0f;
-	static float z = 0.0f;
-	float angle_offset = 0.0f;
-
-	for (auto light : scene.GetPointLights()) {
-		light->SetAttenuation(vals[0], vals[1], vals[2]);
-		light->SetMaxDistance(vals[3]);
-		if (vals[4] == 0.0) {
-			light->SetMaxDistance(0);
-		}
-		angle += 0.005 / 3.0f;
-		angle_offset += 10.0f / 3.0f;
-		x = 90.0f * cosf(ExtraMath::ToRadians(angle + angle_offset));
-		z = 90.0f * sinf(ExtraMath::ToRadians(angle + angle_offset));
-		light->SetPosition(x, 10.0f, z);
-
-		glm::fvec3 light_color = light->GetColor();
-		shaderLibrary.flat_color_shader.SetColor(light_color.x, light_color.y, light_color.z);
-	}
-
-	if (static_cast<bool>(vals[4])) DrawLightMeshVisuals();
-
-	auto light = scene.GetSpotLights()[0];
-	auto cam_target = glm::normalize(p_camera->GetTarget());
-	auto cam_pos = p_camera->GetPos();
-
-	//light->SetPosition(cam_pos.x, cam_pos.y, cam_pos.z);
-	light->SetLightDirection(-cam_target.x, -cam_target.y, -cam_target.z);
+	static LightConfigValues light_vals;
 
 	DrawLightingEntities();
 
-	skybox.Draw(ExtraMath::GetCameraTransMatrix(p_camera->GetPos()) * p_camera->GetMatrix() * projectionMatrix);
+	skybox.Draw(ExtraMath::GetCameraTransMatrix(p_camera->GetPos()));
 	DrawGrid();
 
 	ControlWindow::CreateBaseWindow();
-	vals = ControlWindow::DisplayPointLightControls(scene.GetPointLights().size());
+	ControlWindow::DisplayPointLightControls(scene.GetPointLights().size(), ActivateLightingControls(light_vals));
 	ControlWindow::Render();
 
+}
+
+LightConfigValues& Renderer::ActivateLightingControls(LightConfigValues& light_vals) {
+
+	for (auto light : scene.GetPointLights()) {
+		light->SetAttenuation(light_vals.atten_constant, light_vals.atten_linear, light_vals.atten_exp);
+		light->SetMaxDistance(light_vals.max_distance);
+		if (!light_vals.lights_enabled) {
+			light->SetMaxDistance(0);
+		}
+	}
+
+	if (light_vals.lights_enabled) DrawLightMeshVisuals();
+
+	return light_vals;
 }
 
 void Renderer::DrawLightMeshVisuals() {
